додел валидацию и тестирования

--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -94,10 +94,10 @@
 
             <p class="theme-title" id="resultTitle">Решение</p>
             
-            <div id="Container-Table"></div>
+            <div id="Container-Table" style="display: flex; flex-direction: column; gap: 20px;"></div>
             
             <div id="saveContainer">
-                <button id="generate-pdf" class="header-button">Сохранить решение в PDF</button>
+                <button id="generate-pdf" class="header-button" style="display: none;">Сохранить решение в PDF</button>
             </div>
         </div>
     </div>
