--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -74,7 +74,7 @@
         </div>
         <p class="theme-title" id="resultTitle">Решение</p>
         <div id="saveContainer">
-            <button class="header-button" id="pdfButton" onclick="saveTablesToPDF()" style="visibility: hidden;">Сохранить решение в PDF</button>
+            <button class="header-button" id="pdfButton" onclick="saveTablesToPDF()">Сохранить решение в PDF</button>
         </div>
     </div>
 </div>
