исправил стили и поправил импоры в routers

--- a/resurse/template/layout.j2
+++ b/resurse/template/layout.j2
@@ -10,6 +10,7 @@
         
         <script src="static\scripts\script.js"></script>
         <script src="static\scripts\block_system_page.js"></script>
+        <script src="static\scripts\smo_rejection.js"></script>
 
         <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
         <title>{{ title }}</title>
