--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -72,6 +72,7 @@ body{
 
 .button-container{
     display: flex;
+    position: absolute;
     left: 50%;
     flex-direction: row;
 }
@@ -300,6 +301,7 @@ body{
     height: 550px;
     display: flex;
     flex-direction: column;
+    align-items: start;
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
@@ -536,7 +538,7 @@ body{
     color: white;
   }
 
-  .button-container {
+  .button-container-block {
     display: flex;
     justify-content: center;
     margin-bottom: 15px;
