--- a/resurse/template/layout.j2
+++ b/resurse/template/layout.j2
@@ -6,10 +6,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+        
         <link rel="stylesheet" href="static\style\layout.css">
-        <script src="static\scripts\block_system_page.js"></script>
+        
+        <script src="static\scripts\smo-over-queue.js"></script>
         <script src="static\scripts\script.js"></script>
+
         <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
         <title>{{ title }}</title>
