--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -112,6 +112,7 @@ body{
 
 .work-area{
     margin-top: 100px;
+    margin-bottom: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -222,7 +223,6 @@ body{
 
 .calc-area{
     display: flex;
-    margin-bottom: 50px;
     flex-direction: row;
     width: 100%;
 }
@@ -301,6 +301,7 @@ body{
     height: 550px;
     display: flex;
     flex-direction: column;
+    align-items: start;
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
@@ -353,16 +354,19 @@ body{
     background-color: rgba(180, 191, 202, 0.5);
 }
 
-.t-table{
+table {
     margin-top: 20px;
-    width: 900px;
+    width: 90%;
     overflow: scroll;
     color: rgb(14, 37, 64);
 }
 
-.t-table th{
+th, td {
+    padding: 8px;
+    text-align: center;
     width: 60px;
     height: 40px;
+    border: 1px solid #000;
 }
 
 .system-block {
