исправил длину таблицы

--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -356,7 +356,7 @@ body{
 
 table {
     margin-top: 20px;
-    width: 90%;
+    width: 900px;
     overflow: scroll;
     color: rgb(14, 37, 64);
 }
