--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -68,7 +68,7 @@
                 <p class="form-text">Количество итераций</p>
                 <input class="form-input" id="iterationCountInput" type="text" placeholder="Введите значение">
             </div>
-            <div style="display: flex; justify-content: center; align-items: center;">
+            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; align-self: center;">
                 <button class="solve-button" onclick="unlimitedSolve()">РЕШИТЬ</button>
             </div>
         </div>
