--- a/resurse/template/header.j2
+++ b/resurse/template/header.j2
@@ -1,7 +1,7 @@
 
 <div class="header">
     <div class="app-name">
-        <img src="static\assets\logo.svg">
+        <img src="static/assets/logo.svg">
         <a class="theme-subtitle" href="/">Relia-Queue</a>
     </div>
     <div class="button-container">
