--- a/resurse/template/index.j2
+++ b/resurse/template/index.j2
@@ -6,20 +6,20 @@
         <span class="theme-text">
             Предметом теории массового обслуживания является установление зависимости между основными характеристиками системы обслуживания (число каналов обслуживания, характер входного потока заявок, которые необходимо обслужить, производительность отдельно взятого канала, пр.) с целью улучшения управления системами.
         </span>
-        <img src="https://sun9-79.userapi.com/impg/6TQkzipIPDZgOCm7eraVVkpz--ijt8d8QtUsOA/oeHDqqtxNoc.jpg?size=1024x438&quality=96&sign=fb3c7360fea8aa635ca8e696b0baa419&type=album">
+        <img src="https://sun9-79.userapi.com/impg/6TQkzipIPDZgOCm7eraVVkpz--ijt8d8QtUsOA/oeHDqqtxNoc.jpg?size=1024x438&quality=96&sign=fb3c7360fea8aa635ca8e696b0baa419&type=album" alt="Formula"></img>
         <p class="theme-subtitle">Перейти к решению задач</p>
         <div class="choice-container">
             <div class="choice-column">
                 <div class="choice-button">
                     <a class="theme-text" href="/cfr-unlimited">Многоканальные СМО с неограниченной очередью</a>
                 </div>
-                <img src="https://sun9-51.userapi.com/impg/Koy-Cp9ah5o9yr2LuLhhinLm9oU7UACLh29awA/Ran6lUijdaE.jpg?size=492x162&quality=96&sign=1b3fc1a0507c40c5185f1a5545b88abb&type=album">
+                <img src="https://sun9-51.userapi.com/impg/Koy-Cp9ah5o9yr2LuLhhinLm9oU7UACLh29awA/Ran6lUijdaE.jpg?size=492x162&quality=96&sign=1b3fc1a0507c40c5185f1a5545b88abb&type=album alt="Formula"></img>
             </div>
             <div class="choice-column">
                 <div class="choice-button">
                     <a class="theme-text" href="/cfr-refusal">Многоканальные СМО с отказами</a>
                 </div>
-                <img src="https://sun9-4.userapi.com/impg/gmo5RHlgXI0J_b3AQOIBIAVgohAxBwaX3ZdjuQ/VUA5a3GyUaU.jpg?size=494x140&quality=96&sign=23dae828308155fad9b0aea469cdca2c&type=album">
+                <img src="https://sun9-4.userapi.com/impg/gmo5RHlgXI0J_b3AQOIBIAVgohAxBwaX3ZdjuQ/VUA5a3GyUaU.jpg?size=494x140&quality=96&sign=23dae828308155fad9b0aea469cdca2c&type=album" alt="Formula"></img>
             </div>
         </div>
         <p class="theme-title">Метод Монте-Карло</p>
