--- a/resurse/template/index.j2
+++ b/resurse/template/index.j2
@@ -13,7 +13,7 @@
                 <div class="choice-button">
                     <a class="theme-text" href="/cfr-unlimited">Многоканальные СМО с неограниченной очередью</a>
                 </div>
-                <img src="https://sun9-51.userapi.com/impg/Koy-Cp9ah5o9yr2LuLhhinLm9oU7UACLh29awA/Ran6lUijdaE.jpg?size=492x162&quality=96&sign=1b3fc1a0507c40c5185f1a5545b88abb&type=album alt="Formula">
+                <img src="https://sun9-51.userapi.com/impg/Koy-Cp9ah5o9yr2LuLhhinLm9oU7UACLh29awA/Ran6lUijdaE.jpg?size=492x162&quality=96&sign=1b3fc1a0507c40c5185f1a5545b88abb&type=album" alt="Formula">
             </div>
             <div class="choice-column">
                 <div class="choice-button">
