--- a/resurse/template/index.j2
+++ b/resurse/template/index.j2
@@ -26,14 +26,14 @@
         <span class="theme-text">
             Метод Монте-Карло - это статистический метод, который используется для имитационного моделирования случайных процессов и оценки характеристик сложных систем. В контексте оценки надежности систем, метод Монте-Карло применяется следующим образом:
         </span>
-        <span class="theme-text">
+        <div class="theme-text">
             <ul>
                 <li>Моделирование отказов элементов</li>
                 <li>Моделирование работы системы</li>
                 <li>Оценка надежности</li>
                 <li>Оценка погрешности</li>
             </ul>
-        </span>
+        </div>
         <p class="theme-subtitle">Перейти к решению задач</p>
         <div class="choice-container">
             <div class="choice-column">
