--- a/resurse/template/footer.j2
+++ b/resurse/template/footer.j2
@@ -1,4 +1,4 @@
 <div class="footer">
     <p>© 2024. Все права защищены.</p>
-    <img src="static/assets/logo.svg" width="25" alt="Логотип компании">
+    <img src="static/assets/logo.svg" width="25" alt="Логотип">
 </div>
