--- a/resurse/template/about.j2
+++ b/resurse/template/about.j2
@@ -2,15 +2,15 @@
         <p class="theme-title">Участники проекта</p>
         <div class="authors-container">
             <div class="author-card">
-                <img src="https://avatars.githubusercontent.com/u/126326655?v=4">
+                <img src="https://avatars.githubusercontent.com/u/126326655?v=4" alt="logo Auther">
                 <p class="theme-text">Вениамин Бурлаков</p>
             </div>
             <div class="author-card">
-                <img src="https://avatars.githubusercontent.com/u/160715541?v=4">
+                <img src="https://avatars.githubusercontent.com/u/160715541?v=4" alt="logo Auther">
                 <p class="theme-text">Кривёнышев Олег</p>
             </div>
             <div class="author-card">
-                <img src="https://avatars.githubusercontent.com/u/115371958?v=4">
+                <img src="https://avatars.githubusercontent.com/u/115371958?v=4" alt="logo Auther">
                 <p class="theme-text">Горячкин Кирилл</p>
             </div>
         </div>
