--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -1,13 +1,13 @@
 <div class="calc-area">
         <div class="skip-parts">
             <button class="skip-button" id="theoryBtn" onclick="goToTheory()">
-                <p class="theme-title">ТЕОРИЯ</p>
+                <span class="theme-title">ТЕОРИЯ</span>
             </button>
             <button class="skip-button" id="formBtn" onclick="goToForm()">
-                <p class="theme-title">ВВОД ПАРАМЕТРОВ</p>
+                <span class="theme-title">ВВОД ПАРАМЕТРОВ</span>
             </button>
             <button class="skip-button" id="resultBtn" onclick="goToResult()">
-                <p class="theme-title">РЕШЕНИЕ</p>
+                <span class="theme-title">РЕШЕНИЕ</span>
             </button>
         </div>
         <div class="work-area" style="margin-left: 240px">
