--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -1,15 +1,5 @@
 <div class="calc-area">
-    <div class="skip-parts">
-            <button class="skip-button" id="theoryBtn" onclick="goToTheory()">
-                <p class="theme-title">ТЕОРИЯ</p>
-            </button>
-            <button class="skip-button" id="formBtn" onclick="goToForm()">
-                <p class="theme-title">ВВОД ПАРАМЕТРОВ</p>
-            </button>
-            <button class="skip-button" id="resultBtn" onclick="goToResult()">
-                <p class="theme-title">РЕШЕНИЕ</p>
-            </button>
-        </div>
+    {% include 'skip_panel.j2' %}
     <div class="work-area">
         <p class="theme-subtitle">СМО с неограниченными очередями</p>
         <p class="theme-title" id="theoryTitle">Теория</p>
@@ -21,9 +11,9 @@
             <span class="theme-text">
                 Граф состояний системы показан ниже. Обратим внимание на то, что в отличие от предыдущей СМО, интенсивность потока обслуживаний (переводящего систему из одного состояния в другое справа налево) не остается постоянной, а по мере увеличения числа заявок в СМО от 0 до n увеличивается от величины m до nm, так как соответственно увеличивается число каналов обслуживания. При числе заявок в СМО большем, чем n, интенсивность потока обслуживании сохраняется равной nm.
             </span>
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image070.jpg">
+            <img src="https://www.semestr.ru/images/math/cmo/c1_image070.jpg" alt="Schema">
             <span class="theme-text">
-                Можно показать, что при r/n < 1 предельные вероятности существуют. Если r/n > 1, очередь растет до бесконечности. Используя формулы (16) и (17) для процесса гибели и размножения, можно получить следующие формулы для предельных вероятностей состояний n-канальной СМО с неограниченной очередью
+                Можно показать, что при r/n &lt; 1 предельные вероятности существуют. Если r/n &gt; 1, очередь растет до бесконечности. Используя формулы (16) и (17) для процесса гибели и размножения, можно получить следующие формулы для предельных вероятностей состояний n-канальной СМО с неограниченной очередью
             </span>
             <p class="theme-text"><span class="math display">$$p_{0} = \left(1 + \frac{p}{1!} + \frac{p^{2}}{2!} + ... + \frac{p^{n-1}}{n-1!} + \frac{p^{n}}{n! (n-p))}\right)$$</span></p>
             <p class="theme-text"><span class="math display">$$p_{1} = \frac{p}{1!}p_{0}, ..., p_{k} = \frac{p^{k}}{k!}p_{0}, ..., p_{n} = \frac{p^{n}}{n!}p_{0}$$</span></p>
@@ -38,13 +28,15 @@
             <span class="theme-text">
                 среднее число заявок в системе
             </span>
-            <span class="theme-text" style="align-self: center">
-            <p class="theme-text"><span class="math display">$$L_{оч.} = \frac{p^{n+1} p_{0}}{n * n!(1-\frac{p}{n})^{2}}$$</span></p>
-            </span>
+            <div class="theme-text" style="align-self: center">
+                <p class="theme-text"><span class="math display">$$L_{оч.} = \frac{p^{n+1} p_{0}}{n * n!(1-\frac{p}{n})^{2}}$$</span></p>
+            </div>
+
             <span class="theme-text">
                 Среднее время пребывания заявки в очереди и среднее время пребывания заявки в системе, как и ранее, находятся по формулам Литтла.
-Замечание. Для СМО с неограниченной очередью при r < 1 любая заявка, пришедшая в систему, будет обслужена, т.е. вероятность отказа Pотк = 0, относительная пропускная способность Q=1, а абсолютная пропускная способность равна интенсивности входящего потока заявок, т.е. А=l.
+                Замечание. Для СМО с неограниченной очередью при r &lt; 1 любая заявка, пришедшая в систему, будет обслужена, т.е. вероятность отказа Pотк = 0, относительная пропускная способность Q=1, а абсолютная пропускная способность равна интенсивности входящего потока заявок, т.е. А=l.
             </span>
+
         </div>
         <p class="theme-title" id="formTitle">Ввод параметров</p>
         <div class="input-form">
